# bitcoin-education

./: .env.example  .gitignore  README.md  pyproject.toml
btcedu/: cli.py  config.py  db.py
btcedu/core/: chunker.py  detector.py  generator.py  pipeline.py  transcriber.py
btcedu/models/: __init__.py  content_artifact.py  episode.py  schemas.py
btcedu/prompts/: outline.py  publishing.py  qa.py  script.py  shorts.py  system.py  visuals.py
btcedu/services/: claude_service.py  download_service.py  feed_service.py  transcription_service.py
btcedu/web/: jobs.py
btcedu/web/static/: app.js
deploy/: btcedu-detect.service  btcedu-detect.timer  btcedu-run.service  btcedu-run.timer
docs/: PROGRESS_LOG.md
tests/: conftest.py  test_chunker.py  test_config.py  test_detector.py  test_generator.py  test_models.py  test_pipeline.py  test_transcriber.py  test_web.py
tests/fixtures/: sample_transcript_de.txt  sample_youtube_feed.xml
